--- a/PracticeWebApp/appsettings.json
+++ b/PracticeWebApp/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EntriesDB;Trusted_Connection=true;"
   },
-  "frontend_url": "http://localhost:3000"
+  "AppUrl": "https://localhost:5001"
 }
