--- a/PracticeWebApp/my-app/.env
+++ b/PracticeWebApp/my-app/.env
@@ -1,1 +1,3 @@
-REACT_APP_BASE_API_ENTRIES_URL = 'https://localhost:7050/api/Entries/'
+HTTPS = true
+REACT_APP_BASE_API_ENTRIES_URL = 'https://localhost:5001/api/Entries'
+REACT_APP_BASE_API_AUTH_URL = 'https://localhost:5001/api/auth'
