--- a/PracticeWebApp/my-app/.env
+++ b/PracticeWebApp/my-app/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_API_ENTRIES_URL = 'https://localhost:5001/api/Entries'
-REACT_APP_BASE_API_AUTH_URL = 'https://localhost:5001/api/auth'
+REACT_APP_BASE_API_ENTRIES_URL = '/api/Entries'
+REACT_APP_BASE_API_AUTH_URL = '/api/auth'
